# mem_malloc_subsystem

./: Cargo.toml  Makefile
apps/c/memtest/: memtest.c
apps/c/threads/: main.c
apps/memtest/: Cargo.toml
apps/memtest/align_test/: Cargo.toml
apps/memtest/basic_test/: Cargo.toml
apps/memtest/multi_thread_test/: Cargo.toml
apps/memtest/multi_thread_test/src/: main.rs
apps/memtest/src/: main.rs
apps/net/httpclient/: expect_info.out
apps/threads/: Cargo.toml
apps/threads/src/: main.rs
crates/allocator/: Cargo.toml
crates/allocator/mimalloc_test_1/: mitest.c
crates/allocator/src/: basic.rs  bitmap.rs  build.rs  lib.rs  tlsf.rs  tlsf_c.rs
crates/allocator/src/tlsf_c/: tlsf.c
crates/allocator/tests/: basic_test.rs  build.rs  global_allocator.rs  mitest.c  test1.rs  test_lib.rs  test_main.rs  tlsf_c.rs
crates/allocator/tests/multi_thread_c/: multi_thread_c.c
crates/allocator_test/src/: basic_test.rs  lib.rs
crates/basic_allocator/src/: lib.rs  linked_list.rs
crates/mimalloc_allocator/src/: data.rs  lib.rs
crates/mimalloc_c/: Cargo.toml
crates/slab_allocator/: Cargo.toml
crates/slab_allocator/src/: lib.rs
crates/tlsf_allocator/src/: data.rs  lib.rs
crates/tlsf_c_allocator/: Cargo.toml  build.rs
crates/tlsf_c_allocator/src/: lib.rs  tlsf.c
doc/: apps_fs_shell.md  init.md
malloc/mimalloc/: readme.md
malloc/mimalloc/test/: CMakeCache.txt
malloc/tlsf/: tlsf.h
modules/axalloc/: Cargo.toml
modules/axalloc/src/: lib.rs
repo/: week6.pptx
slides/: crates.md  final_doc.md  final_report.pptx  mimalloc_note.md  note.md  test_data.xlsx  testbench.md  tlsf_note.md  todo.md  week10~11.pptx  week12.pptx  week13.pptx  week14.pptx  week15.pptx  week6.pptx  week7.pptx  week8.pptx  week9.pptx
(+15 files in other folders)
