[package]
name = "arceos-threads"
version = "0.1.0"
edition = "2021"
authors = ["Yibin Zhang <zhangyb20@mails.tsinghua.edu.cn>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
preempt = ["libax/sched_rr"]
default = ["libax/default"]

[dependencies]
libax = { path = "../../ulib/libax", default-features = false, features = ["paging", "multitask"] }
