[package]
name = "allocator"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buddy_system_allocator = { version = "0.9", default-features = false }
bitmap-allocator = { git = "https://github.com/rcore-os/bitmap-allocator.git", rev = "88e871a" }
slab_allocator = { path = "../slab_allocator" }
basic_allocator = { path = "../basic_allocator" }
log = "0.4"
[dev-dependencies]
spin = "0.9"
axlog = {path = "../../modules/axlog", features = ["std"]}
libc = "0.2.0"